// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextButton renders as expected when passing a dark skin 1`] = `
<button
  className="btn btn--text btn--normal btn--dark"
  onClick={[Function]}
  type="button"
>
  
  Test Text Dark Button
</button>
`;

exports[`TextButton renders as expected when passing a plus icon 1`] = `
<button
  className="btn btn--text btn--normal"
  onClick={[Function]}
  type="button"
>
  <span
    className="lab-icon lab-icon--plus lab-icon--white lab-icon--petit lab-icon--btn__icon"
  />
  Test Text Small Button
</button>
`;

exports[`TextButton renders as expected when passing a small size 1`] = `
<button
  className="btn btn--text btn--small"
  onClick={[Function]}
  type="button"
>
  
  Test Text Small Button
</button>
`;

exports[`TextButton renders as expected when passing disabled as true 1`] = `
<button
  className="btn btn--text btn--normal"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  
  Test Text Disabled Button 1
</button>
`;

exports[`TextButton renders with base props 1`] = `
<button
  className="btn btn--text btn--normal"
  onClick={[Function]}
  type="button"
>
  
  Test Text Button
</button>
`;
